docs: 📝 active storage採用に伴いレスポンスキーが変わるのでスキーマを修正 #50
